Agregada la sección de nuevos usuarios

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="toggle">
                 <div class="logo">
                     <img src="images/logo.png" alt="logo">
-                    <h2>Admins<span class="danger"></span></span></h2>
+                    <h2>Akira<span class="danger">Dev</span></span></h2>
                     <div class="close" id="close-btn">
                         <span class="material-icons-sharp">
                             close
@@ -144,6 +144,26 @@
                         </div>
                     </div>
                 </div>
+            </div>
+        </main>
+        <!-- End of Analyses section-->
+
+        <div class="new-users">
+            <h1>Nuevos Usuarios</h1>
+            <div class="new-users-list">
+                <div class="new-user">
+                    <div class="user-info">
+                        <div class="user-img">
+                            <img src="images/profile-2.jpg" alt="user">
+                        </div>
+                        <div class="user-name">
+                            <h3>Juan Perez</h3>
+                            <p>Hace 1 hora</p>
+                        </div>
+                    </div>
+                    
+                </div>
+        </div>
     </div>
 
     <script src="orders.js"></script>
