--- a/index.html
+++ b/index.html
@@ -145,26 +145,81 @@
                     </div>
                 </div>
             </div>
-        </main>
         <!-- End of Analyses section-->
 
         <div class="new-users">
-            <h1>Nuevos Usuarios</h1>
-            <div class="new-users-list">
-                <div class="new-user">
-                    <div class="user-info">
-                        <div class="user-img">
-                            <img src="images/profile-2.jpg" alt="user">
-                        </div>
-                        <div class="user-name">
-                            <h3>Juan Perez</h3>
-                            <p>Hace 1 hora</p>
-                        </div>
-                    </div>
-                    
+            <h2>Nuevos Usuarios</h2>
+            <div class="user-list">
+                <div class="user">
+                    <img src="images/profile-2.jpg" alt="user">
+                    <h2>John Doe</h2>
+                    <p>Hace 1 hora</p>
                 </div>
+                <div class="user">
+                    <img src="images/profile-3.jpg" alt="user">
+                    <h2>Adam Smith</h2>
+                    <p>Hace 30 minutos</p>
+                </div>
+                <div class="user">
+                    <img src="images/profile-4.jpg" alt="user">
+                    <h2>Michelle Johnson</h2>
+                    <p>Activo ahora</p>
+                </div>
+                <div class="user">
+                    <img src="images/plus.png">
+                    <h2>Más</h2>                
+                </div>
+            </div>
         </div>
-    </div>
+        <!-- End of new users section-->
+        <!--Recent orders section-->
+        <div class="pedidos-recientes"> 
+            <h2>Últimos Pedidos</h2>
+            <table>
+
+                <thead>
+                    <tr>
+                        <th>Nombre de Curso</th>
+                        <th>Numero de Curso</th>
+                        <th>Pago</th>
+                        <th>Estado</th>
+                    </tr>
+                </thead>
+                <tbody></tbody>
+            </table>
+            <a href="#">Ver todos</a>
+        </div>
+        <!-- End of Recent orders section-->
+        <!--Right side section-->
+    </main>
+    <div class="right-section">
+            <div class="nav">
+                <button id="menu-btn">
+                    <span class="material-icons-sharp">
+                        menu
+                    </span>
+                </button>
+                <div class="dark-mode">
+                    <span class="material-icons-sharp active">
+                        light_mode
+                    </span>
+                    <span class="material-icons-sharp">
+                        dark_mode
+                    </span>
+                </div>
+
+                <div class="profile">
+                    <div class="info">
+                        <p>Hey, <b>Akira</b></p>
+                        <small class="text-muted">Admin</small>
+                    </div>
+                    <div class="profile-photo">
+                        <img src="images/profile-1.jpg" alt="profile">
+                    </div>
+                </div>
+
+            </div>
+</div>
 
     <script src="orders.js"></script>
     <script src="index.js"></script>
